Updates the version of libGDX used Adds a various assets (some of which have a TODO to change to better ones) Sets up various screens.  We still need better buttons and stuff, but I feel it's workable.  Kinda sorta maybe, I hope. Mocks up the two scenes, still need to be done better with better assets too Needs to be refactored some to provide callbacks for changing / dynamic functionality, but that should be fairly easy.

--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="src" path="src/main/assets/"/>
+	<classpathentry kind="src" path="src/main/assets"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="libs/gdx-freetype-natives.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gdx-freetype.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bodyeditor-loader.jar" sourcepath="libs/bodyeditor-loader-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/tween-engine-api.jar" sourcepath="libs/tween-engine-api-sources.jar"/>
